feat(cli:quotas): add query command